--- a/datacombo/templates/teacher.html
+++ b/datacombo/templates/teacher.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load template_filters %}
+
 {% block content %}
 
 <h1>{{ teacher.full_name }}</h1>
@@ -25,7 +27,7 @@
       
       {% for c in teacher.courses.all %}
       <tr>
-        <td>{{ c.name }}</td>
+        <td><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></td>
         <td>{{ c.subject.name }}</td>
         <td>{{ c.student_count }}</td>
         <td>{{ c.classroom_size }}</td>
@@ -35,6 +37,29 @@
     </table>    
   </div>
 </div>
+
+<h2>Results Summary</h2>
+
+{% for factor in teacher.feedback_given_in.survey.summarymeasure_set.all %}
+<h3>{{ factor.label }}</h3>
+
+<div class="row">
+  <div class="col-lg-8 col-lg-offset-2">
+    <table class="table table-striped">
+      <tr>
+        <th>Question</td>
+        <th>Rating</th>
+      </tr>      
+      {% for v in factor.variable_set.all %}
+        <tr>
+          <td>{{ v.description }}</td>
+          <td>{{ teacher|calculate_average:v }}</td>
+        </tr>        
+      {% endfor %}
+    </table>    
+  </div>
+</div>
+{% endfor %}
 
 <p><a href="{{ teacher.feedback_given_in.get_absolute_url }}">Back to {{ teacher.feedback_given_in.school.name }} ({{ teacher.feedback_given_in.month }}, {{ teacher.feedback_given_in.year }})</a></p>
 {% endblock %}
