--- a/datacombo/templates/teacher.html
+++ b/datacombo/templates/teacher.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
-{% load template_filters %}
-
 {% block content %}
 
 <h1>{{ teacher.full_name }}</h1>
@@ -40,26 +38,7 @@
 
 <h2>Teacher Ratings</h2>
 
-{% for factor in teacher.feedback_given_in.survey.summarymeasure_set.all %}
-<h3>{{ factor.label }}</h3>
-
-<div class="row">
-  <div class="col-lg-8 col-lg-offset-2">
-    <table class="table table-striped">
-      <tr>
-        <th class="col-lg-10">Question</td>
-        <th class="col-lg-2">Rating</th>
-      </tr>      
-      {% for v in factor.variable_set.all %}
-        <tr>
-          <td>{{ v.description }}</td>
-          <td>{{ teacher|calculate_average:v }}</td>
-        </tr>        
-      {% endfor %}
-    </table>    
-  </div>
-</div>
-{% endfor %}
+{% include "results.html" with group=teacher factors=teacher.feedback_given_in.survey.summarymeasure_set.all %}
 
 <p><a href="{{ teacher.feedback_given_in.get_absolute_url }}">Back to {{ teacher.feedback_given_in.school.name }} ({{ teacher.feedback_given_in.month }}, {{ teacher.feedback_given_in.year }})</a></p>
 {% endblock %}
