--- a/datacombo/templates/survey/clean_survey.html
+++ b/datacombo/templates/survey/clean_survey.html
@@ -1,54 +1,103 @@
 {% extends "base.html" %}
 
 {% block content %}
+
 <div class="row">
-  <div class="col-lg-8 col-lg-offset-2">
+  <div class="col-lg-12">
     <h1 class="text-center">Data Cleaning</h1>
     <p>Cleaning data for: <strong>{{ survey }}</strong></p>
+    {% if courses_deleted %}
+      <div class="alert alert-danger"><p>{{ courses_deleted }}</p></div>
+    {% endif %}
+    {% if teachers_deleted %}
+      <div class="alert alert-danger"><p>{{ teachers_deleted }}</p></div>
+    {% endif %}
+
     {% if survey.is_teacher_feedback %}
+
+      <!-- COURSES HIGHLIGHTED FOR CLEANING -->
       <h2>Courses Below Cutoff</h2>
-      <p>The following courses have either fewer than 5 student responses or response rate below 60%. These courses and their recorded responses should be deleted from the database.</p>
 
-      <p>You can choose to delete each course individually, or click on "Clean All Data" at the bottom to delete all these courses from the database. Please note that you <strong>can't undo this.</strong></p>
+      {% if survey.courses_below_cutoff|length == 0 %}
+        <p>Found no courses with either response rates lower than 60% or fewer than 5 responses. Woohoo!</p>
+      {% else %}
+        <p>The following courses have either fewer than 5 student responses or response rate below 60%. These courses and their recorded responses should be deleted from the database.</p>
 
-      <table class="table table-striped">
-        <tr>
-          <th>Course Name</th>
-          <th>Teacher Name</th>
-          <th>School</th>
-          <th>Responses Count</th>
-          <th>Classroom Size</th>
-          <th>Response Rate</th>
-          <th>Action</th>
-        </tr>
-        {% for c in survey.courses_below_cutoff %}
-          {% for t in c.teacher_set.all %}
+        <p>You can choose to delete each course individually, or click on "Clean All Data" at the bottom to delete all these courses from the database. Please note that you <strong>can't undo this.</strong></p>
+
+        <table class="table table-striped table-condensed">
+          <tr>
+            <th>School</th>
+            <th>Teacher Name</th>
+            <th>Course Name</th>
+            <th>Responses Count</th>
+            <th>Classroom Size</th>
+            <th>Response Rate</th>
+            <th>Action</th>
+          </tr>
+          {% for c in survey.courses_below_cutoff %}
+            {% for t in c.teacher_set.all %}
+              <tr>
+                <td>{{ t.feedback_given_in.school.abbrev_name }}</td>
+                <td>{{ t.full_name }}</td>
+                <td><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></td>
+                <td>{{ c.student_count }}</td>
+                <td>{{ c.classroom_size }}</td>
+                <td>{{ c.rr_string }}</td>
+                <td>
+                  <a href="{% url "courses-edit" pk=c.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"></i></a>
+                  <a href="{% url "courses-delete" pk=c.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"></i></a>
+                </td>
+              </tr>          
+            {% endfor %}
+          {% endfor %}
+        </table>
+      {% endif %}
+      
+      <!-- TEACHERS HIGHLIGHTED FOR CLEANING -->
+      <h2>"Orphaned" Teachers</h2>
+      {% if survey.orphaned_teachers.count == 0 %}
+        <p>Found no "orphaned" teachers. Woohoo!</p>
+      {% else %}
+        <p>The following teachers have no related courses and ratings linked to them. They should be removed from the database. </p>
+
+        <p>You can choose to delete each teacher individually, or click on "Clean All Data" at the bottom to delete all these teachers from the database. Please note that you <strong>can't undo this.</strong></p>
+
+        <table class="table table-striped table-condensed">
+          <tr>
+            <th>School</th>
+            <th>Teacher Name</th>
+            <th>Number of Courses</th>
+            <th>Action</th>
+          </tr>
+          {% for t in survey.orphaned_teachers.all %}
             <tr>
-              <td><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></td>
-              <td>{{ t.full_name }}</td>
               <td>{{ t.feedback_given_in.school.abbrev_name }}</td>
-              <td>{{ c.student_count }}</td>
-              <td>{{ c.classroom_size }}</td>
-              <td>{{ c.rr_string }}</td>
+              <td>{{ t.full_name }}</td>
+              <td>{{ t.courses.count }}</td>
               <td>
-                <a href="{% url "courses-edit" pk=c.id %}" class="btn btn-default">Edit</a>
-                <a href="{% url "courses-delete" pk=c.id %}" class="btn btn-danger">Delete</a>
+                <a href="{% url "teachers-edit" pk=t.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"></i></a>
+                <a href="{% url "teachers-delete" pk=t.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"></i></a>
               </td>
             </tr>          
           {% endfor %}
-        {% endfor %}
-      </table>
-
+        </table>
+      {% endif %}
     {% endif %}
   </div>
 </div>
+
+
+
 <div class="row">
   <div class ="col-lg-4 col-lg-offset-4">
-    <p>
-        <button type="submit" class="btn btn-lg btn-block btn-primary">Clean All Data</button>
-    </p>
+    <form action="{% url "surveys-clean" pk=survey.id %}" method="post">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-lg btn-block btn-danger"><i class="icon-trash"> </i>Clean All Data</button>
+    </form>
   </div>
 </div>
+
 <div class="row">
   <p class="text-center"><a href="{% url "home-view" %}">back to home</a></p>
 </div>
