--- a/datacombo/templates/survey/clean_survey.html
+++ b/datacombo/templates/survey/clean_survey.html
@@ -99,6 +99,8 @@
 </div>
 
 <div class="row">
-  <p class="text-center"><a href="{% url "home-view" %}">back to home</a></p>
+  <div class="col-lg-12">
+    <p><a href="{% url "surveys-view" pk=survey.id %}">Back to {{ survey.name }}</a></p>
+  </div>
 </div>
 {% endblock %}
