--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -9,29 +9,62 @@
   <div class="col-lg-8">
     <h2>Participants Overview</h2>
 
-    <table class="table table-striped">
+    <table class="table table-striped table-condensed">
       <tr>
         <th>School Name</th>
         <th>Times Participated in YT</th>
+        <th>Most Recent Participation</th>
       </tr>
       
       {% for school in survey.school_set.distinct %}
       <tr class="school">
         <td><a href="{{ school.get_absolute_url }}">{{ school.name }}</a></td>
         <td>{{ school.repeat_count }}</td>
+        <td>{{ school.schoolparticipation_set.latest.month }}, {{ school.schoolparticipation_set.latest.year }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+
+  <div class="col-lg-4 top-padding">
+    <p>
+      <a href="{% url "surveys-upload" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-upload"> </i>Upload CSV to This Survey</a>
+    </p>
+    <p>
+      <a href="{% url "surveys-clean" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sort-by-attributes"> </i>Clean Survey Data</a>
+    </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-lg-8">
+    <h2>Variables</h2>
+
+    <table class="table table-striped table-condensed">
+      <tr>
+        <th>Variable Name</th>
+        <th>Label</th>
+        <th>Active?</th>
+        <th class="col-lg-2">Action</th>
+      </tr>
+      
+      {% for v in survey.variable_set.all %}
+      <tr class="variable">
+        <td>{{ v.name }}</td>
+        <td>{{ v.description }}</td>
+        <td>{{ v.active }}</td>
+        <td>
+          <a href="{% url "variables-edit" pk=v.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"></i></a>
+          <a href="{% url "variables-delete" pk=v.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"></i></a>
+        </td>
       </tr>
       {% endfor %}
     </table>
   </div>
   <div class="col-lg-4 top-padding">
     <p>
-      <form action="{% url "surveys-upload" pk=survey.id %}" method="POST">
-        {% csrf_token %}
-          <button type="submit" class="btn btn-lg btn-default"><i class="icon-upload"> </i>Upload CSV to This Survey</button>
-      </form>
-    </p>
-    <p>
-      <a href="{% url "surveys-clean" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sort-by-attributes"> </i>Clean Survey Data</a>
+      <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
+      <a href="{% url "surveys-map" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sitemap"> </i>Review Variable Mapping</a>
     </p>
   </div>
 </div>
