--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -42,14 +42,16 @@
 
     <table class="table table-striped table-condensed">
       <tr>
+        <th>Summary Measure</th>
         <th>Variable Name</th>
         <th>Label</th>
         <th>Active?</th>
-        <th class="col-lg-2">Action</th>
+        <th class="col-lg-1">Action</th>
       </tr>
       
-      {% for v in survey.variable_set.all %}
+      {% for v in variables %}
       <tr class="variable">
+        <td>{{ v.summary_measure.label }}</td>
         <td>{{ v.name }}</td>
         <td>{{ v.description }}</td>
         <td>{{ v.active }}</td>
@@ -64,6 +66,8 @@
   <div class="col-lg-4 top-padding">
     <p>
       <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
+    </p>
+    <p>
       <a href="{% url "surveys-map" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sitemap"> </i>Review Variable Mapping</a>
     </p>
   </div>
