--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -37,39 +37,43 @@
 </div>
 
 <div class="row">
-  <div class="col-lg-8">
+  <div class="col-lg-12">
     <h2>Variables</h2>
+    <p>
+      <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
+    </p>
 
     <table class="table table-striped table-condensed">
       <tr>
         <th>Summary Measure</th>
         <th>Variable Name</th>
+        <th>Mapped From</th>
         <th>Label</th>
         <th>Active?</th>
-        <th class="col-lg-1">Action</th>
+        <th class="col-lg-2">Action</th>
       </tr>
       
       {% for v in variables %}
       <tr class="variable">
         <td>{{ v.summary_measure.label }}</td>
         <td>{{ v.name }}</td>
+        <td>
+          {% if not v.vmap_list %}
+            <span class="label label-danger">No map found</span>
+          {% else %}
+            {{ v.vmap_list|join:", " }}          
+          {% endif %}
+        </td>
         <td>{{ v.description }}</td>
         <td>{{ v.active }}</td>
         <td>
-          <a href="{% url "variables-edit" pk=v.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"></i></a>
-          <a href="{% url "variables-delete" pk=v.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"></i></a>
+          <a href="{% url "variables-edit" pk=v.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"> </i>Variable</a>
+          <a href="{% url "variables-edit" pk=v.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"> </i>Mapping</a>
+          <a href="{% url "variables-delete" pk=v.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"> </i>Variable</a>
         </td>
       </tr>
       {% endfor %}
     </table>
-  </div>
-  <div class="col-lg-4 top-padding">
-    <p>
-      <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
-    </p>
-    <p>
-      <a href="{% url "surveys-map" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sitemap"> </i>Review Variable Mapping</a>
-    </p>
   </div>
 </div>
 <p><a href="{% url "home-view" %}">Back to home</a></p>
