--- a/datacombo/templates/session/session.html
+++ b/datacombo/templates/session/session.html
@@ -2,25 +2,37 @@
 
 {% block content %}
 
-<h1>Data Import Confirmation</h1>
+<h1>{{ importsession.title }}</h1>
 
-{% if not_csv_file %}
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      {% if importsession.parse_status %}
+        <div class="alert alert-success">Upload processing is complete for this import session.</div>
+      {% else %}
+        <div class="alert alert-warning">CSV data is still being processed for this session. The information here may not be most up-to-date. Please check again at a later time.</div>
+      {% endif %}
+    </div>
+  </div>
+</div>
 
-  <p>That was not a valid CSV file. Please go back and try re-uploading a different file.</p>
+<p>This session was used to update this survey: <strong>{{ importsession.survey.name }}</strong></p>
 
-{% elif not_csv_match %}
+{% comment %}
+  If it's either a raw or legacy upload, list all variables for the given survey
+  and display whether there was a match, i.e., the survey variables are found in the column names of the CSV
+{% endcomment %}
 
-  <p>Catacombs determined that this CSV file is not valid for {{ survey_name }}. Please go back and try re-uploading the right CSV file for this survey.</p>
 
-{% else %}
+{% comment %}
 
-  <p>You selected to update this survey: <strong>{{ survey_name }}</strong></p>
+We'll split this into two cases: one for raw upload, which will compare raw variable names with CSV column names
+and one for legacy upload, which will compare survey variable names with CSV column names
 
-  {% if filetype != 'panel' %}
-
+  {% if s.import_type == 'raw' or s.import_type == 'legacy' %}
     <h2>Column Matching</h2>
 
-    <p>The following table lists all variables recorded for this survey and indicate whether the system found a match from the uploaded CSV file<br />
+    <p>The following table lists all variables used by this survey and indicate whether the system found a match from the uploaded CSV file<br />
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-lg-offset-3">
@@ -49,18 +61,83 @@
         </div>
       </div>
     </p>
-  
   {% endif %}
 
-  <h2>Update School Records</h2>
+{% endcomment %}
 
-  {% if number_of_new_schools == 0 %}
-
-    <p>All schools in your CSV file already exist in the database.</p>
-
+<ul class="nav nav-tabs">
+  <li><a href="#generalinfo" data-toggle="tab">General Info</a></li>
+  <li><a href="#varmatch" data-toggle="tab">Variable Matching</a></li>
+  <li>
+    <a href="#schools" data-toggle="tab">
+      Schools
+      {% if importsession.school_count != 0 %}
+        <span class="label label-success">{{ importsession.school_count }}</span>
+      {% endif %}
+    </a>
+  </li>
+  <li>
+    <a href="#schoolprs" data-toggle="tab">
+      School Records
+      {% if importsession.pr_count != 0 %}
+        <span class="label label-success">{{ importsession.pr_count }}</span>
+      {% endif %}
+    </a>
+  </li>
+  {% if importsession.survey.is_teacher_feedback %}
+    <li>
   {% else %}
+    <li class="disabled">
+  {% endif %}
+      <a href="#teachers" data-toggle="tab">
+        Teachers
+        {% if importsession.teacher_count != 0 %}
+          <span class="label label-success">{{ importsession.teacher_count }}</span>
+        {% endif %}
+      </a>
+    </li>
+  {% if importsession.survey.is_teacher_feedback %}
+    <li>
+  {% else %}
+    <li class="disabled">
+  {% endif %}
+      <a href="#courses" data-toggle="tab">
+        Courses
+        {% if importsession.course_count != 0 %}
+          <span class="label label-success">{{ importsession.course_count }}</span>
+        {% endif %}
+      </a>
+    </li>
+</ul>
 
-    <p>Based on your CSV file, the following schools do not exist and will be added to the <strong>School</strong> database with the following fields. You can modify these new records later after upload:</p>
+<div class="tab-content">
+  <div class="tab-pane active" id="generalinfo">
+    <h2>General Information</h2>
+    <p>This session took place at: <strong>{{ importsession.date_created }}</strong></p>
+    <p>
+      There are {{ importsession.number_of_rows }} rows in the CSV file.  
+      {% if importsession.import_type == 'raw' or importsession.import_type == 'legacy' %}
+        A total of {{ importsession.student_count }} new students were recorded from your file.
+        {{ importsession.response_count }} data points were recorded from your file.
+      {% endif %}
+    </p>
+  </div>
+
+  <div class="tab-pane" id="varmatch">
+    <h2>Comparison of Survey Variables and CSV Columns</h2>
+    <p>Var Match Records go here</p>
+  </div>
+
+  <div class="tab-pane" id="schools">
+    <h2>New School Records</h2>
+
+    {% if importsession.school_count == 0 %}
+
+      <p>All schools found in the CSV file already exist in the database.</p>
+
+    {% else %}
+
+      <p>The following schools in the CSV file did not exist in and were added to the database through this importsession:</p>
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-lg-offset-3">
@@ -71,7 +148,7 @@
                 <th>School Alpha</th>
               </tr>
 
-              {% for school in added_schools %}
+              {% for school in importsession.school_set.all %}
               <tr>
                 <td>{{ school.name }}</td>
                 <td>{{ school.abbrev_name }}</td>
@@ -83,161 +160,107 @@
           </div>
         </div>
       </div>
-      
-  {% endif %}
+        
+    {% endif %}
+  </div>
 
-  <h2>Update Participation Records</h2>
+  <div class="tab-pane" id="schoolprs">
+    <h2>New Participation Records</h2>
 
-  {% if number_of_new_participations == 0 %}
+    {% if importsession.pr_count == 0 %}
 
-    <p>There are no new participation records for the schools in the CSV file.</p>
+      <p>There are no new participation records for the schools in the CSV file.</p>
 
-  {% else %}
+    {% else %}
 
-    <p>The database did not find participation records for these schools and therefore have added them automatically:</p>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-lg-offset-3">
-              <table class="table table-striped">
-                <tr>
-                  <th>School Name</th>
-                  <th>Date Participated</th>
-                  <th>Number of Teachers Created</th>
-                  {% if filetype == 'legacy' %}
-                  <th>Number of Students Created</th>
-                  {% endif %}
-                </tr>
+      <p>The database did not find participation records for these schools and therefore have added them automatically:</p>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 col-lg-offset-3">
+                <table class="table table-striped">
+                  <tr>
+                    <th>School Name</th>
+                    <th>Date Participated</th>
+                    <th>No. of Teachers Created</th>
+                    <th>No. of Students Created</th>
+                  </tr>
 
-                {% for p in added_records %}
-                <tr>
-                  <td>{{ p.school.name }}</td>
-                  <td>{{ p.date_participated }}</td>
-                  <td>{{ p.teacher_set.count }}</td>
-                  {% if filetype == 'legacy' %}
+                  {% for p in importsession.schoolparticipation_set.all %}
+                  <tr>
+                    <td>{{ p.school.name }}</td>
+                    <td>{{ p.date_participated }}</td>
+                    <td>{{ p.teacher_set.count }}</td>
                     <td>{{ p.student_set.count }}</td>
-                  {% endif %}
-                  </td>
-                </tr>
-                {% endfor %}
-              </table>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </table>
+              </div>
             </div>
           </div>
-        </div>
 
-  {% endif %}
+    {% endif %}
+  </div>
 
-  {% if number_of_new_teachers %}
+  <div class="tab-pane" id="teachers">
+    <h2>New Teacher Records</h2>
 
-    <h2>Update Teacher Records</h2>
-
-    {% if number_of_new_teachers == 0 %}
+    {% if importsession.teacher_count == 0 %}
 
       <p>All teachers in your CSV file already exist in the database.</p>
 
     {% else %}
 
-      <p>A total of {{ number_of_new_teachers }} teachers were added to the database. The following table lists all new teachers:</p>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-lg-offset-3">
-              <table class="table table-striped table-condensed">
-                <tr>
-                  <th>School</th>
-                  <th>Full Name</th>
-                  <th>Number of Courses Created</th>
-                </tr>
+      <p>A total of {{ importsession.teacher_count }} teachers were added to the database. The following table lists all new teachers:</p>
 
-                {% for t in added_teachers %}
-                <tr>
-                  <td>{{ t.feedback_given_in.school.abbrev_name }}</td>
-                  <td>{{ t.full_name }}</td>
-                  <td>{{ t.courses.count }}</td>
-                </tr>
-                {% endfor %}
-              </table>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-lg-offset-3">
+            <table class="table table-striped table-condensed">
+              <tr>
+                <th>School</th>
+                <th>Full Name</th>
+                <th>No. of Courses Created</th>
+              </tr>
+
+              {% for t in importsession.teacher_set.all %}
+              <tr>
+                <td>{{ t.feedback_given_in.school.abbrev_name }}</td>
+                <td>{{ t.full_name }}</td>
+                <td>{{ t.courses.count }}</td>
+              </tr>
+              {% endfor %}
+            </table>
           </div>
         </div>
+      </div>
     {% endif %}
+  </div>
 
-  {% endif %}
+  <div class="tab-pane" id="courses">
+    <h2>New Course Records</h2>
 
-  {% if number_of_new_courses %}
-
-    <h2>Update Course Records</h2>
-
-    {% if number_of_new_courses == 0 %}
+    {% if importsession.course_count == 0 %}
 
       <p>All courses listed in your CSV file already exist in the database.</p>
 
     {% else %}
 
-      <p>A total of {{ number_of_new_courses }} courses were added to the database.</p>
+      <p>A total of {{ importsession.course_count }} courses were added to the database.</p>
         
     {% endif %}
+  </div>
 
-  {% endif %}
+</div>
 
-  {% if number_of_new_subjects %}
-
-    <h2>Update Subject Records</h2>
-
-    {% if number_of_new_subjects == 0 %}
-
-      <p>All subjects listed in your CSV file already exist in the database.</p>
-
-    {% else %}
-
-      <p>A total of {{ number_of_new_subjects }} subjects were added to the database.</p>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-lg-offset-3">
-              <table class="table table-striped">
-                <tr>
-                  <th>Subject Name</th>
-                </tr>
-
-                {% for s in added_subjects %}
-                <tr>
-                  <td>{{ s.name }}</td>
-                </tr>
-                {% endfor %}
-              </table>
-            </div>
-          </div>
-        </div>
-        
-    {% endif %}
-
-  {% endif %}
-
-  <h2>Other Information</h2>
-
-  <p>There are {{ number_of_rows }} rows in your file.</p>  
-
-  {% if filetype == 'raw' %}
-    <p>A total of {{ number_of_new_students }} new students were recorded from your file.</p>  
-  {% endif %}
-
-  {% if filetype == 'raw' %}
-    <p>{{ number_of_new_datapoints }} data points were recorded from your file.</p>  
-  {% endif %}
-
-  <p>Something doesn't look right? Fret not, use the button below to undo the data import.</p>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-lg-offset-3">
-          <!-- <form action="{% url "sessions-delete" pk=session_id %}" method="post"> -->
-            <!-- {% csrf_token %} -->
-            <!-- <input type="submit" name="delete" value="Undo Import" /> -->
-            <a href="{% url "sessions-delete" pk=session_id %}" class="btn btn-danger btn-lg btn-block"><i class="icon-undo"> </i>Undo Import</a>
-          <!-- </form> -->
-        </div>
-      </div>
+<p>Something doesn't look right? Fret not, use the button below to delete all data from this import session and re-upload another file.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 col-lg-offset-3">
+      <a href="{% url "sessions-delete" pk=importsession.id %}" class="btn btn-danger btn-lg btn-block"><i class="icon-trash"> </i>Delete Session</a>
     </div>
-
-{% endif %}
-
+  </div>
+</div>
 
 <a href="{% url "sessions-list" %}">Back to list of sessions</a>
 {% endblock %}
