--- a/datacombo/templates/session/session_list.html
+++ b/datacombo/templates/session/session_list.html
@@ -22,7 +22,7 @@
   
   {% for session in object_list %}
   <tr class="session">
-    <td>{{ session.title }}</td>
+    <td><a href="{{ session.get_absolute_url }}">{{ session.title }}</a></td>
     <td>{{ session.import_type }}</td>
     <td>{{ session.survey.name }}</td>
     <td>
