--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -4,81 +4,99 @@
 
 <h1>{{ survey.name }}</h1>
 
+<ul class="nav nav-tabs">
+  <li><a href="#participants" data-toggle="tab">Participants Overview</a></li>
+  <li><a href="#variables" data-toggle="tab">Variables</a></li>
+</ul>
 
-<div class="row">
-  <div class="col-lg-8">
-    <h2>Participants Overview</h2>
+<div class="tab-content">
+  <div class="tab-pane active" id="participants">
+    <div class="row">
+      <div class="col-lg-8">
+        <h2>Participants Overview</h2>
 
-    <table class="table table-striped table-condensed">
-      <tr>
-        <th>School Name</th>
-        <th>Times Participated in YT</th>
-        <th>Most Recent Participation</th>
-      </tr>
-      
-      {% for school in survey.school_set.distinct %}
-      <tr class="school">
-        <td><a href="{{ school.get_absolute_url }}">{{ school.name }}</a></td>
-        <td>{{ school.repeat_count }}</td>
-        <td>{{ school.schoolparticipation_set.latest.month }}, {{ school.schoolparticipation_set.latest.year }}</td>
-      </tr>
-      {% endfor %}
-    </table>
+        <table class="table table-striped table-condensed">
+          <tr>
+            <th>School Name</th>
+            <th>Times Participated in YT</th>
+            <th>Most Recent Participation</th>
+          </tr>
+          
+          {% for school in survey.school_set.distinct %}
+          <tr class="school">
+            <td><a href="{{ school.get_absolute_url }}">{{ school.name }}</a></td>
+            <td>{{ school.repeat_count }}</td>
+            <td>{{ school.schoolparticipation_set.latest.month }}, {{ school.schoolparticipation_set.latest.year }}</td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+
+      <div class="col-lg-4 top-padding">
+        <p>
+          <a href="{% url "surveys-upload" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-upload"> </i>Upload CSV to This Survey</a>
+        </p>
+        <p>
+          <a href="{% url "surveys-clean" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sort-by-attributes"> </i>Clean Survey Data</a>
+        </p>
+        <p>
+          <a href="{% url "export-survey-response-data" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-cloud-download"> </i>Export Student Responses</a>
+        </p>
+      </div>
+    </div>
   </div>
 
-  <div class="col-lg-4 top-padding">
-    <p>
-      <a href="{% url "surveys-upload" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-upload"> </i>Upload CSV to This Survey</a>
-    </p>
-    <p>
-      <a href="{% url "surveys-clean" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sort-by-attributes"> </i>Clean Survey Data</a>
-    </p>
+  <div class="tab-pane" id="variables">
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>Variables</h2>
+        <p>
+          <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
+        </p>
+
+        <table class="table table-striped table-condensed">
+          <tr>
+            <th>Summary Measure</th>
+            <th>Variable Name</th>
+            <th>Mapped From</th>
+            <th>Label</th>
+            <th>Qual?</th>
+            <th class="col-lg-1">Action</th>
+          </tr>
+          
+          {% for v in variables %}
+          <tr class="variable">
+            <td>{{ v.summary_measure.label }}</td>
+            <td>{{ v.name }}</td>
+            <td>
+                {% for vm in v.varmap_set.all %}
+                  <a href="{{ vm.get_absolute_url }}"><span class="label label-primary">{{ vm.raw_name }}</span></a>  
+                {% empty %}
+                  <span class="label label-default">None</span>
+                {% endfor %}
+                <a href="{% url "varmap-add" pk=survey.id %}"><span class="label label-success"><i class="icon-plus"> </i></span></a>
+            </td>
+            <td>{{ v.description }}</td>
+            <td>
+              {% if v.qual %}
+                <i class="icon-ok-sign text-primary"></i>
+              {% endif %}
+            </td>
+            <td>
+              <a href="{% url "variables-edit" pk=v.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"> </i></a>
+              <a href="{% url "variables-delete" pk=v.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"> </i></a>
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
+    </div>
   </div>
+
 </div>
 
-<div class="row">
-  <div class="col-lg-12">
-    <h2>Variables</h2>
-    <p>
-      <a href="{% url "var-add" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-plus-sign-alt"> </i>Add New Variable</a>
-    </p>
 
-    <table class="table table-striped table-condensed">
-      <tr>
-        <th>Summary Measure</th>
-        <th>Variable Name</th>
-        <th>Mapped From</th>
-        <th>Label</th>
-        <th>Qual?</th>
-        <th class="col-lg-1">Action</th>
-      </tr>
-      
-      {% for v in variables %}
-      <tr class="variable">
-        <td>{{ v.summary_measure.label }}</td>
-        <td>{{ v.name }}</td>
-        <td>
-            {% for vm in v.varmap_set.all %}
-              <a href="{{ vm.get_absolute_url }}"><span class="label label-primary">{{ vm.raw_name }}</span></a>  
-            {% empty %}
-              <span class="label label-default">None</span>
-            {% endfor %}
-            <a href="{% url "varmap-add" pk=survey.id %}"><span class="label label-success"><i class="icon-plus"> </i></span></a>
-        </td>
-        <td>{{ v.description }}</td>
-        <td>
-          {% if v.qual %}
-            <i class="icon-ok-sign text-primary"></i>
-          {% endif %}
-        </td>
-        <td>
-          <a href="{% url "variables-edit" pk=v.id %}" class="btn btn-default btn-xs"><i class="icon-edit icon-large"> </i></a>
-          <a href="{% url "variables-delete" pk=v.id %}" class="btn btn-danger btn-xs"><i class="icon-trash icon-large"> </i></a>
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
-  </div>
-</div>
+
+
 <p><a href="{% url "home-view" %}">Back to home</a></p>
 {% endblock %}
