--- a/datacombo/templates/base.html
+++ b/datacombo/templates/base.html
@@ -52,6 +52,7 @@
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+    <script language="javascript">var STATIC_URL = "{{ STATIC_URL|escapejs }}";</script>
     <script src="{% static "custom.js" %}"></script>
   </body>
 </html>
