--- a/datacombo/templates/index.html
+++ b/datacombo/templates/index.html
@@ -30,6 +30,14 @@
   {% endfor %}
 </table>
 
+<h2>Data Exchange</h2>
+
+<p>Use these options to manage data going into and out of Catacombs.</p>
+<ul class="list-inline">
+  <li><a href="{% url "sessions-list" %}" class="btn btn-lg btn-default"><i class="icon-cloud-download"> </i>Manage Data Imports</a></li>
+  <li><a href="#" class="btn btn-lg btn-default"><i class="icon-cloud-upload"> </i>Manage Data Exports</a></li>
+</ul>
+
 <h2>Record Management</h2>
 
 <p>Use these options to manage the overall records of these objects in the database.</p>
@@ -40,11 +48,6 @@
   <li><a href="{% url "subjects-list" %}" class="btn btn-lg btn-default">Manage Academic Subjects</a></li>
 </ul>
 
-<h2>Data Troubleshooting</h2>
 
-<p>Having data issues? Use this option for troubleshooting issues with data. You can browse through the import sessions and look at "orphaned" objects in the database, e.g., schools that have no participation records, teachers with no course names, or students with no recorded responses.</p>
-<ul class="list-inline">
-  <li><a href="{% url "sessions-list" %}" class="btn btn-lg btn-default"><i class="icon-th-list"> </i>Manage Import Sessions</a></li>
-</ul>
 
 {% endblock %}
