Working on export feature

--- a/datacombo/templates/index.html
+++ b/datacombo/templates/index.html
@@ -34,8 +34,8 @@
 
 <p>Use these options to manage data going into and out of Catacombs.</p>
 <ul class="list-inline">
-  <li><a href="{% url "sessions-list" %}" class="btn btn-lg btn-default"><i class="icon-cloud-download"> </i>Manage Data Imports</a></li>
-  <li><a href="#" class="btn btn-lg btn-default"><i class="icon-cloud-upload"> </i>Manage Data Exports</a></li>
+  <li><a href="{% url "sessions-list" %}" class="btn btn-lg btn-default"><i class="icon-cloud-upload"> </i>Manage Data Imports</a></li>
+  <li><a href="{% url "exports-list" %}" class="btn btn-lg btn-default"><i class="icon-cloud-download"> </i>Manage Data Exports</a></li>
 </ul>
 
 <h2>Record Management</h2>
