--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -61,6 +61,7 @@
             <th>Mapped From</th>
             <th>Label</th>
             <th>Qual?</th>
+            <th>Demographic?</th>
             <th class="col-lg-1">Action</th>
           </tr>
           
@@ -79,6 +80,11 @@
             <td>{{ v.description }}</td>
             <td>
               {% if v.qual %}
+                <i class="icon-ok-sign text-primary"></i>
+              {% endif %}
+            </td>
+            <td>
+              {% if v.demographic %}
                 <i class="icon-ok-sign text-primary"></i>
               {% endif %}
             </td>
