--- a/datacombo/templates/survey/survey.html
+++ b/datacombo/templates/survey/survey.html
@@ -12,38 +12,51 @@
 <div class="tab-content">
   <div class="tab-pane active" id="participants">
     <div class="row">
-      <div class="col-lg-8">
+      <div class="col-lg-12">
         <h2>Participants Overview</h2>
+
+        <p>
+          <div class="btn-group">
+            <button class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown">
+              <i class="icon-cloud-upload"> </i>Upload <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="{% url "surveys-upload" pk=survey.id %}"><i class="icon-cloud-upload"> </i>Upload a CSV file to this Survey</a>
+              </li>
+            </ul>
+          </div>
+          <div class="btn-group">
+            <button class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown">
+              <i class="icon-cloud-download"> </i>Download <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="{% url "export-survey-response-data" pk=survey.id %}"><i class="icon-sort-by-order"> </i>All Student Responses</a>
+                <a href="{% url "export-survey-qual-data" pk=survey.id %}"><i class="icon-comments"> </i>All Student Comments</a>
+              </li>
+            </ul>
+          </div>
+          <a href="{% url "surveys-clean" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-stethoscope"> </i>Clean Survey Data</a>
+        </p>
 
         <table class="table table-striped table-condensed">
           <tr>
             <th>School Name</th>
-            <th>No. of Participations</th>
+            <th>Times Participated</th>
             <th>Most Recent Participation</th>
             <th>Most Recent No. of Student Responses</th>
           </tr>
           
-          {% for school in survey.school_set.distinct %}
+          {% for s in schools %}
           <tr class="school">
-            <td><a href="{{ school.get_absolute_url }}">{{ school.name }}</a></td>
-            <td>{{ school.repeat_count }}</td>
-            <td>{{ school.schoolparticipation_set.latest.month }}, {{ school.schoolparticipation_set.latest.year }}</td>
-            <td>{{ school.schoolparticipation_set.latest.student_count }}</td>
+            <td><a href="{{ s.get_absolute_url }}">{{ s.name }}</a></td>
+            <td>{{ s.repeat_count }}</td>
+            <td>{{ s.schoolparticipation_set.latest.month }}, {{ s.schoolparticipation_set.latest.year }}</td>
+            <td>{{ s.schoolparticipation_set.latest.student_count }}</td>
           </tr>
           {% endfor %}
         </table>
-      </div>
-
-      <div class="col-lg-4 top-padding">
-        <p>
-          <a href="{% url "surveys-upload" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-upload"> </i>Upload CSV to This Survey</a>
-        </p>
-        <p>
-          <a href="{% url "surveys-clean" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-sort-by-attributes"> </i>Clean Survey Data</a>
-        </p>
-        <p>
-          <a href="{% url "export-survey-response-data" pk=survey.id %}" class="btn btn-lg btn-default"><i class="icon-cloud-download"> </i>Export Student Responses</a>
-        </p>
       </div>
     </div>
   </div>
